test/crab/invalid/no_such_func.crab
fn main() -> Int {
    invalid()

    return 0
}
